--- a/config.env
+++ b/config.env
@@ -2,5 +2,5 @@ ANYKERNEL_SOURCE=https://github.com/osm0sis/AnyKernel3
 ANYKERNEL_SOURCE_BRANCH=master
 KERNEL_SOURCE=https://github.com/PixelExperience-Devices/kernel_xiaomi_sdm710
 KERNEL_SOURCE_BRANCH=twelve
-KERNEL_TARGET=sirius_defconfig
+KERNEL_TARGET=sirius
 BUILD_ARGS:CC=clang LD=ld.lld
